# AegisAlpha

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml  ruff.toml
backend/aegis/: __init__.py  cli.py
backend/aegis/agents/: base.py  data_harvester_agent.py  debate_agent.py  fund_flow_agent.py  level_analyst_agent.py  options_strategist_s1_agent.py  options_strategist_s2_agent.py  passive_health_check_agent.py  portfolio_orchestrator_agent.py  research_manager_agent.py  risk_gate_agent.py  smart_money_agent.py  trend_phase_analyst_agent.py
backend/aegis/api/: __init__.py  app.py  deps.py  ws_manager.py
backend/aegis/calculators/: __init__.py  gex.py  greeks.py  levels.py  models.py  stop_loss.py  trend.py  volume_profile.py  wyckoff.py
backend/aegis/llm/: client.py
backend/aegis/memory/: interface.py
backend/aegis/models/: __init__.py  base.py  memory.py
backend/aegis/notifier/: __init__.py  telegram.py
backend/aegis/pipeline/: __init__.py  graph.py  graph_builder.py  graph_full.py  graph_lightweight.py  runner.py  state.py  trigger_runner.py
backend/aegis/registry/: __init__.py  agent_registry.py
backend/aegis/storage/: __init__.py  position_store.py  trigger_store.py
backend/aegis/tools/: __init__.py  base.py  cache.py  rate_limiter.py  registry.py
backend/aegis/utils/: circuit_breaker.py  logging.py  retry.py  settings.py
backend/alembic/: env.py
backend/config/: agents.yaml  mock_portfolio.json  rules.yaml  schedule.yaml  tools.yaml
backend/config/prompts/: debate_bear.j2  debate_bull.j2  debate_judge.j2  fund_flow_narrative.j2  options_strategist_s2.j2  research_manager_synthesis.j2  (+5 more)
backend/tests/: conftest.py
(+238 files in other folders)
