[project]
name = "aegis"
version = "0.1.0"
description = "Aegis 2.0 — Personal US Stock/Options Trading Decision Assistant"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "fastapi>=0.115",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "tenacity>=8.3",
    "loguru>=0.7",
    "typer>=0.12",
    "apscheduler>=3.10",
    "python-telegram-bot>=20.7",
    "openai>=1.40",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "chromadb>=0.5",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff",
    "mypy",
    "pip-audit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["aegis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = [
    "loguru",
    "tenacity",
    "chromadb",
    "pyarrow",
    "telegram",
    "apscheduler",
    "pydantic",
    "pydantic_settings",
    "sqlalchemy",
    "sqlalchemy.orm",
    "openai",
    "langgraph",
    "langgraph.graph",
    "langchain_core",
    "typer",
    "httpx",
    "jinja2",
    "pandas",
    "yaml",
]
ignore_missing_imports = true
